--- a/gpu-perf-data/CMakeLists.txt
+++ b/gpu-perf-data/CMakeLists.txt
@@ -3,7 +3,7 @@ project(GPU_Monitor)
 
 set(CMAKE_CXX_STANDARD 14)
 
-include(cmake/FindLibDRM.txt)
+include(../cmake/FindLibDRM.txt)
 
 if(${LibDRM_FOUND})
     message("FOUND LibDrm!")
@@ -26,9 +26,9 @@ if(${LIBDRM_AMDGPU_FOUND})
     SET(LIBDRM_AMDGPU_LIBRARY  ${LIBDRM_AMDGPU_LIBDIR}/libdrm_amdgpu.so)
 
     SET(AMDGPU_SRC ${AMDGPU_SRC}
-            GPU-Data/amdgpu/AMDGPUHandler.cpp
-            GPU-Data/amdgpu/AMDMonitoringData.cpp
-            GPU-Data/amdgpu/AMDStaticDeviceData.cpp)
+            amdgpu/AMDGPUHandler.cpp
+            amdgpu/AMDMonitoringData.cpp
+            amdgpu/AMDStaticDeviceData.cpp)
 endif()
 
 # Check for cuda library
@@ -38,33 +38,33 @@ SET(NVIDIA_SRC "")
 if(${CUDA_FOUND})
     message("FOUND CUDA!")
     SET(NVIDIA_SRC ${NVIDIA_SRC}
-            GPU-Data/nvidia/NvidiaHandler.cpp
-            GPU-Data/nvidia/NvidiaStaticDeviceData.cpp
-            GPU-Data/nvidia/NvidiaHelper.cpp
-            GPU-Data/nvidia/NvidiaMonitoringData.cpp)
+            nvidia/NvidiaHandler.cpp
+            nvidia/NvidiaStaticDeviceData.cpp
+            nvidia/NvidiaHelper.cpp
+            nvidia/NvidiaMonitoringData.cpp)
 endif()
 
 
 # Build GPU data library
-add_library(gpu-data STATIC
-        GPU-Data/BaseGPUData.cpp
-        GPU-Data/CombinedGPUData.cpp
-        GPU-Data/ExceptionHandling.cpp
-        GPU-Data/GPUScanner.cpp
+add_library(gpu-perf-data STATIC
+        src/BaseGPUData.cpp
+        src/CombinedGPUData.cpp
+        src/ExceptionHandling.cpp
+        src/GPUScanner.cpp
         ${AMDGPU_SRC} # Add amdgpu specific implementation
         ${NVIDIA_SRC} # Add nvidia specific implementation
         )
-reference_libdrm(gpu-data)
-target_include_directories(gpu-data PRIVATE gpu-data/include)
+reference_libdrm(gpu-perf-data)
+target_include_directories(gpu-perf-data PRIVATE include/)
 
 if(${LIBDRM_AMDGPU_FOUND}) # Add amdgpu specific implementation
-    target_include_directories(gpu-data PRIVATE gpu-data/amdgpu)
-    target_link_libraries(gpu-data PRIVATE ${LIBDRM_AMDGPU_LIBRARY})
-    target_compile_definitions(gpu-data PUBLIC AMDGPU_FOUND)
+    target_include_directories(gpu-perf-data PRIVATE amdgpu/include)
+    target_link_libraries(gpu-perf-data PRIVATE ${LIBDRM_AMDGPU_LIBRARY})
+    target_compile_definitions(gpu-perf-data PUBLIC AMDGPU_FOUND)
 endif()
 
 if(${CUDA_FOUND})
-    target_include_directories(gpu-data PRIVATE ${CUDA_INCLUDE_DIRS}/nvml.h)
-    target_link_libraries(gpu-data PRIVATE /usr/lib/x86_64-linux-gnu/libnvidia-ml.so)
-    target_compile_definitions(gpu-data PRIVATE NVIDIA_FOUND)
+    target_include_directories(gpu-perf-data PRIVATE ${CUDA_INCLUDE_DIRS})
+    target_link_libraries(gpu-perf-data PRIVATE /usr/lib/libnvidia-ml.so)
+    target_compile_definitions(gpu-perf-data PRIVATE NVIDIA_FOUND)
 endif()
